@@ -274,6 +274,7 @@ class Config(object):
         shot_thumbnail_path = "{{project.code}}/Sequences/{{sequence.code}}/Shots/{{shot.code}}/Thumbnail",
         shot_thumbnail_filename = "{{shot.code}}_thumbnail.{{extension}}",
         
+        thumbnail_format = "JPG",
         thumbnail_quality = 70,
         
         version_types = [
